(29.11.2022-17h10) Création des pages et des balises

--- a/html/rest2.html
+++ b/html/rest2.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,101 +8,104 @@
     <script src="https://kit.fontawesome.com/6b42d92d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <title>Oh my food</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/Css/style.css">
+    <title>Oh my food - La note enchantée</title>
 </head>
+
 <body>
-    <header>
-        <a href="/acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+    <header class="restau__header">
+        <a href="/acceuil.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
+        <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
-    <main>
-        <section>
-            
-        </section>
-        <section>
-            <div>
-                <h2>La note enchantée</h2>
-                <i class="fa-regular fa-heart"></i>
-            </div>
-            <h3>Entrées</h3>
-            <div>
-                <div>Ravioles de foie gras</div>
-                <div>Accompagnés de leur crème à la truffe 25€</div>
+    <main class="restau--bckgrd">
+        <section class="restau__img "><img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></section>
+        <header class="restau__name">
+            <h1 class="restau__name__title">La note enchantée</h1>
+            <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
+        </header>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Entrées</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Ravioles de foie gras</h3>
+                <div class="restau__card__text">Accompagnés de leur crème à la truffe<span class="restau__card__price">25€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Caviar osciètre </div>
-                <div>Sur blini à la farine de blé noir 35€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Caviar osciètre</h3>
+                <div class="restau__card__text">Sur blini à la farine de blé noir<span class="restau__card__price">35€</span>
+                </div>
                 <div></div>
             </div>
-            <div>
-                <div>Homard et espuma de potiron</div>
-                <div>Mariné aux zestes d'orange 20€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Homard et espuma de potiron</h3>
+                <div class="restau__card__text">Mariné aux zestes d'orange<span class="restau__card__price">20€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Foie gras de canard cuit entier</div>
-                <div>Confiture de figue et pain toasté 35€</div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <h3>Plats</h3>
-            <div>
-                <div>Noix de coquilles Saint-Jacques</div>
-                <div>Sur lit de purée de céleri-rave 40€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Langoustine poêlée</div>
-                <div>Purée de patate douce 35€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Mijoté de queue de boeuf </div>
-                <div>Et riz sauvage aux zestes de citron 44€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Foie gras de canard cuit entier</h3>
+                <div class="restau__card__text">Confiture de figue et pain toasté<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
         </section>
-        <section>
-            <h3>Desserts</h3>
-            <div>
-                <div>Macaron noisette et chocolat</div>
-                <div>Glace au caramel brun et sel de Guérande 18€</div>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Plats</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Noix de coquilles Saint-Jacques</h3>
+                <div class="restau__card__text">Sur lit de purée de céleri-rave<span class="restau__card__price">40€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Baba au rhum revisité</div>
-                <div>Avec son coulis de citron 22€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Langoustine poêlée</h3>
+                <div class="restau__card__text">Purée de patate douce<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Tarte au citron meringuée </div>
-                <div>Déstructurée 23€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Mijoté de queue de boeuf</h3>
+                <div class="restau__card__text">Et riz sauvage aux zestes de citron<span class="restau__card__price">44€</span></div>
                 <div></div>
             </div>
         </section>
-
+        <section class="restau__section">
+            <h2 class="restau__section__title">Desserts</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Macaron noisette et chocolat</h3>
+                <div class="restau__card__text">Glace au caramel brun et sel de Guérande<span class="restau__card__price">18€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Baba au rhum revisité</h3>
+                <div class="restau__card__text">Avec son coulis de citron<span class="restau__card__price">22€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Tarte au citron meringuée</h3>
+                <div class="restau__card__text">Déstructurée<span class="restau__card__price">23€</span></div>
+                <div></div>
+            </div>
+        </section>
     </main>
-         
-    <footer>
-        <h1>ohmyfood</h1>
+
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
         <ul>
-            <a href="#">
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            </a>
-            <a href="#">
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            </a>
-            <a href="#">
-                <li>Mentions légales</li>
-            </a>
-            <a href="mailto: mathieu.hatstatt@gmail.com">
-                <li>Contact</li>
-            </a>
+            <li>
+                <a href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restauaurant</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a>
+            </li>
+            <li>
+                <a href="#">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:mathieu.hatstatt@gmail.com">Contact</a>
+            </li>
         </ul>
     </footer>
 </body>
-</html>
