--- a/html/rest3.html
+++ b/html/rest3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,95 +8,101 @@
     <script src="https://kit.fontawesome.com/6b42d92d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <title>Oh my food</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/Css/style.css">
+    <title>Oh my food - À la française</title>
 </head>
+
 <body>
-    <header>
-        <a href="/acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+    <header class="restau__header">
+        <a href="/acceuil.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
+        <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
-    <main>
-        <section></section>
-        <section>
-            <div>
-                <div>
-                    <h2>À la française</h2>
-                    <i class="fa-regular fa-heart"></i>
+    <main class="restau--bckgrd">
+        <section class="restau__img "><img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></section>
+        <header class="restau__name">
+            <h1 class="restau__name__title">À la française</h1>
+            <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
+        </header>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Entrées</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Tartare de poulpe acdidulé</h3>
+                <div class="restau__card__text">Aux zestes d'orange<span class="restau__card__price">25€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Velouté de légumes d'antan</h3>
+                <div class="restau__card__text">Carotte, panais, topinambour<span class="restau__card__price">35€</span>
                 </div>
-            </div>
-            <h3>Entrées</h3>
-            <div>
-                <div>Tartare de poulpe acdidulé</div>
-                <div>Aux zestes d'orange 25€</div>
                 <div></div>
             </div>
-            <div>
-                <div>Velouté de légumes d'antan</div>
-                <div>Carotte, panais, topinambour 35€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Saoupe à l'oignon</div>
-                <div>Revisitée 20€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Soupe à l'oignon</h3>
+                <div class="restau__card__text">Revisitée<span class="restau__card__price">20€</span></div>
                 <div></div>
             </div>
         </section>
-        <section>
-            <h3>Plats</h3>
-            <div>
-                <div>Coquilles Saint-Jacques</div>
-                <div>Accompagnées d'une purée de panais 40€</div>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Plats</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Coquilles Saint-Jacques</h3>
+                <div class="restau__card__text">Accompagnées d'une purée de panais<span class="restau__card__price">40€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Magret de canard</div>
-                <div>Et parmentier de pommes de terre 35€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Magret de canard</h3>
+                <div class="restau__card__text">Et parmentier de pommes de terre<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Pigeonneau d’Ille-et-Vilaine</div>
-                <div>Sur son lit de gnocchis aux légumes 44€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                <div class="restau__card__text">Sur son lit de gnocchis aux légumes<span class="restau__card__price">44€</span></div>
                 <div></div>
             </div>
         </section>
-        <section>
-            <h3>Desserts</h3>
-            <div>
-                <div>Pétales de violettes glacés</div>
-                <div>Et purée de noisettes 18€</div>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Desserts</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Pétales de violettes glacés</h3>
+                <div class="restau__card__text">Et purée de noisettes<span class="restau__card__price">18€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Fondant au chocolat</div>
-                <div>Revisité 22€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Fondant au chocolat</h3>
+                <div class="restau__card__text">Revisité<span class="restau__card__price">22€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Millefeuille croustillant</div>
-                <div>Myrtilles et pâte d’amande 23€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Millefeuille croustillant</h3>
+                <div class="restau__card__text">Myrtilles et pâte d’amande<span class="restau__card__price">23€</span></div>
                 <div></div>
             </div>
         </section>
     </main>
-         
-    <footer>
-        <h1>ohmyfood</h1>
+
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
         <ul>
-            <a href="#">
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            </a>
-            <a href="#">
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            </a>
-            <a href="#">
-                <li>Mentions légales</li>
-            </a>
-            <a href="mailto: mathieu.hatstatt@gmail.com">
-                <li>Contact</li>
-            </a>
+            <li>
+                <a href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restauaurant</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a>
+            </li>
+            <li>
+                <a href="#">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:mathieu.hatstatt@gmail.com">Contact</a>
+            </li>
         </ul>
     </footer>
 </body>
+
 </html>
