--- a/html/rest1.html
+++ b/html/rest1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,96 +8,101 @@
     <script src="https://kit.fontawesome.com/6b42d92d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <title>Oh my food</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/Css/style.css">
+    <title>Oh my food - La pallette du goût</title>
 </head>
+
 <body>
-    <header>
-        <a href="/acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+    <header class="restau__header">
+        <a href="/acceuil.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
+        <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
-    <main>
-        <section>
-            
-        </section>
-        <section>
-            <div>
-                <h2>La palette du goût</h2>
-                <i class="fa-regular fa-heart"></i>
-            </div>
-            <h3>Entrées</h3>
-            <div>
-                <div>Fricassée d'escargot</div>
-                <div>Au piment d'Espelette 25€</div>
+    <main class="restau--bckgrd">
+        <section class="restau__img "><img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></section>
+        <header class="restau__name">
+            <h1 class="restau__name__title">La pallette du goût</h1>
+            <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
+        </header>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Entrées</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Fricassée d'escargot</h3>
+                <div class="restau__card__text">Au piment d'Espelette<span class="restau__card__price">25€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Foie gras de canard mi-cuit</div>
-                <div>Et ses copeaux de truffe noire 35€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Foie gras de canard mi-cuit</h3>
+                <div class="restau__card__text">Et ses copeaux de truffe noire<span class="restau__card__price">35€</span>
+                </div>
                 <div></div>
             </div>
-            <div>
-                <div>Œuf au plat</div>
-                <div>Assaisonné à la truffe sur lit de caviar 20€</div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <h3>Plats</h3>
-            <div>
-                <div>Filet de boeuf aux herbes</div>
-                <div>Accompagné de sa ribambelle de légumes 40€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Parmentier de queue de boeuf</div>
-                <div>À la truffe noire sur sa purée de panais 35€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Filet de turbot</div>
-                <div>Aux agrumes 44€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Œuf au plat</h3>
+                <div class="restau__card__text">Assaisonné à la truffe sur lit de caviar<span class="restau__card__price">20€</span></div>
                 <div></div>
             </div>
         </section>
-        <section>
-            <h3>Desserts</h3>
-            <div>
-                <div>Paris-Brest</div>
-                <div>Revisité 18€</div>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Plats</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Filet de boeuf aux herbes</h3>
+                <div class="restau__card__text">Accompagné de sa ribambelle de légumes<span class="restau__card__price">40€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Macaron au chocolat d'exception </div>
-                <div>Et glace à la vanille de Madagascar 22€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Parmentier de queue de boeuf</h3>
+                <div class="restau__card__text">À la truffe noire sur sa purée de panais<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Mousse au chocolat </div>
-                <div>Au piment d'Espelette et à la truffe noire 23€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Filet de turbot</h3>
+                <div class="restau__card__text">Aux agrumes<span class="restau__card__price">44€</span></div>
                 <div></div>
             </div>
         </section>
-
+        <section class="restau__section">
+            <h2 class="restau__section__title">Desserts</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Paris-Brest</h3>
+                <div class="restau__card__text">Revisité<span class="restau__card__price">18€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Macaron au chocolat d'exception</h3>
+                <div class="restau__card__text">Et glace à la vanille de Madagascar<span class="restau__card__price">22€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Mousse au chocolat</h3>
+                <div class="restau__card__text">Au piment d'Espelette et à la truffe noire<span class="restau__card__price">23€</span></div>
+                <div></div>
+            </div>
+        </section>
     </main>
-         
-    <footer>
-        <h1>ohmyfood</h1>
+
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
         <ul>
-            <a href="#">
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            </a>
-            <a href="#">
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            </a>
-            <a href="#">
-                <li>Mentions légales</li>
-            </a>
-            <a href="mailto: mathieu.hatstatt@gmail.com">
-                <li>Contact</li>
-            </a>
+            <li>
+                <a href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restauaurant</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a>
+            </li>
+            <li>
+                <a href="#">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:mathieu.hatstatt@gmail.com">Contact</a>
+            </li>
         </ul>
     </footer>
 </body>
+
 </html>
