--- a/html/rest4.html
+++ b/html/rest4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,96 +8,101 @@
     <script src="https://kit.fontawesome.com/6b42d92d87.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <title>Oh my food</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/Css/style.css">
+    <title>Oh my food - Le délice des sens</title>
 </head>
+
 <body>
-    <header>
-        <a href="/acceuil.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+    <header class="restau__header">
+        <a href="/acceuil.html"><i class="restau__header__icon fa-solid fa-arrow-left"></i></a>
+        <h1 class="restau__header__title">ohmyfood</h1>
     </header>
 
-    <main>
-        <section>
-            
-        </section>
-        <section>
-            <div>
-                <h2>Le délice des sens</h2>
-                <i class="fa-regular fa-heart"></i>
-            </div>
-            <h3>Entrées</h3>
-            <div>
-                <div>Tartare de thon</div>
-                <div>Assaisonné au yuzu 25€</div>
+    <main class="restau--bckgrd">
+        <section class="restau__img "><img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""></section>
+        <header class="restau__name">
+            <h1 class="restau__name__title">Le délice des sens</h1>
+            <div class="heart__icon restau__icon"><i class="heart__icon__fa restau__heart fa-regular fa-heart"></i></div>
+        </header>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Entrées</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Tartare de thon</h3>
+                <div class="restau__card__text">Assaisonné au yuzu<span class="restau__card__price">25€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Bouchée de homard croustillant</div>
-                <div>Et sa farandole de petits légumes 35€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Bouchée de homard croustillant</h3>
+                <div class="restau__card__text">Et sa farandole de petits légumes<span class="restau__card__price">35€</span>
+                </div>
                 <div></div>
             </div>
-            <div>
-                <div>Velouté de cèpes </div>
-                <div>Aux truffes 20€</div>
-                <div></div>
-            </div>
-        </section>
-        <section>
-            <h3>Plats</h3>
-            <div>
-                <div>Poulet rôti aux herbes de Provence </div>
-                <div>Et sa crème de truffe 40€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Langouste rôtie </div>
-                <div>Et ses légumes de saison 35€</div>
-                <div></div>
-            </div>
-            <div>
-                <div>Côte de boeuf Angus </div>
-                <div>Et sa purée de panais 44€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Velouté de cèpes</h3>
+                <div class="restau__card__text">Aux truffes<span class="restau__card__price">20€</span></div>
                 <div></div>
             </div>
         </section>
-        <section>
-            <h3>Desserts</h3>
-            <div>
-                <div>Farandole de desserts</div>
-                <div>Du chef 18€</div>
+        <section class="restau__section">
+            <h2 class="restau__section__title">Plats</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Poulet rôti aux herbes de Provence</h3>
+                <div class="restau__card__text">Et sa crème de truffe<span class="restau__card__price">40€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Crème brulée </div>
-                <div>Revisitée n22€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Langouste rôtie</h3>
+                <div class="restau__card__text">Et ses légumes de saison<span class="restau__card__price">35€</span></div>
                 <div></div>
             </div>
-            <div>
-                <div>Tiramisu </div>
-                <div>À la noisette 23€</div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Côte de boeuf Angus</h3>
+                <div class="restau__card__text">Et sa purée de panais<span class="restau__card__price">44€</span></div>
                 <div></div>
             </div>
         </section>
-
+        <section class="restau__section">
+            <h2 class="restau__section__title">Desserts</h2>
+            <div class="restau__underline"></div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Farandole de desserts</h3>
+                <div class="restau__card__text">Du chef<span class="restau__card__price">18€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Crème brulée</h3>
+                <div class="restau__card__text">Revisitée<span class="restau__card__price">22€</span></div>
+                <div></div>
+            </div>
+            <div class="restau__card">
+                <h3 class="restau__card__title">Millefeuille croustillant</h3>
+                <div class="restau__card__text">Myrtilles et pâte d’amande<span class="restau__card__price">23€</span></div>
+                <div></div>
+            </div>
+        </section>
     </main>
-         
-    <footer>
-        <h1>ohmyfood</h1>
+
+    <footer class="footer">
+        <h2 class="footer__title">ohmyfood</h2>
         <ul>
-            <a href="#">
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            </a>
-            <a href="#">
-                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            </a>
-            <a href="#">
-                <li>Mentions légales</li>
-            </a>
-            <a href="mailto: mathieu.hatstatt@gmail.com">
-                <li>Contact</li>
-            </a>
+            <li>
+                <a href="#"><i class="fa-solid fa-utensils footer__icon"></i>Proposer un restauaurant</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-handshake-angle footer__icon"></i>Devenir partenaire</a>
+            </li>
+            <li>
+                <a href="#">Mentions légales</a>
+            </li>
+            <li>
+                <a href="mailto:mathieu.hatstatt@gmail.com">Contact</a>
+            </li>
         </ul>
     </footer>
 </body>
+
 </html>
